syntax = "proto3";

option go_package = "github.com/gislihr/userservice/proto";

service UserService {
    rpc AddUser (AddUserRequest) returns (UserResponse) {}
}

message AddUserRequest {
  string user_name = 1;
  string email = 2;
  string password = 3;
}
  
message UserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}